tests/ui/sized-hierarchy/pretty-print-no-feat-dep-has-feat.stderr
error[E0119]: conflicting implementations of trait `ConstSizedTr` for type `X<_>`
  --> $DIR/pretty-print-no-feat-dep-has-feat.rs:18:1
   |
LL | impl<T: Sized> ConstSizedTr for X<T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `pretty_print_dep`:
           - impl<T> ConstSizedTr for T;

error[E0119]: conflicting implementations of trait `SizedTr` for type `X<_>`
  --> $DIR/pretty-print-no-feat-dep-has-feat.rs:21:1
   |
LL | impl<T: Sized> SizedTr for X<T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `pretty_print_dep`:
           - impl<T> SizedTr for T;

error[E0119]: conflicting implementations of trait `NegSizedTr` for type `X<_>`
  --> $DIR/pretty-print-no-feat-dep-has-feat.rs:24:1
   |
LL | impl<T: ?Sized> NegSizedTr for X<T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `pretty_print_dep`:
           - impl<T> NegSizedTr for T
             where T: ?Sized;

error[E0119]: conflicting implementations of trait `ConstMetaSizedTr` for type `X<_>`
  --> $DIR/pretty-print-no-feat-dep-has-feat.rs:27:1
   |
LL | impl<T: ?Sized> ConstMetaSizedTr for X<T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `pretty_print_dep`:
           - impl<T> ConstMetaSizedTr for T
             where T: ?Sized;

error[E0119]: conflicting implementations of trait `MetaSizedTr` for type `X<_>`
  --> $DIR/pretty-print-no-feat-dep-has-feat.rs:30:1
   |
LL | impl<T: ?Sized> MetaSizedTr for X<T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `pretty_print_dep`:
           - impl<T> MetaSizedTr for T
             where T: ?Sized;

error[E0119]: conflicting implementations of trait `PointeeSizedTr` for type `X<_>`
  --> $DIR/pretty-print-no-feat-dep-has-feat.rs:33:1
   |
LL | impl<T: ?Sized> PointeeSizedTr for X<T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `pretty_print_dep`:
           - impl<T> PointeeSizedTr for T
             where T: ?Sized;

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0119`.
